# NumPack

./: .gitignore  BATCH_MODE_GUIDE.md  BENCHMARK_README.md  BUILD.md  Benchmark.md  CLONE_FEATURE.md  Cargo.toml  FINAL_SUMMARY_OPEN_CLOSE.md  FullBenchmark.md  IMPLEMENTATION_REPORT_OPEN_CLOSE.md  NumPack_File_Format_Specification.spec  README.md  README_Performance_Test.md  RUST_BACKEND_COMPATIBILITY.md  build.py  build.rs  compare_operations.py  complete_readme_benchmark.py  comprehensive_benchmark.py  comprehensive_readme_benchmark.py  comprehensive_test.py  diagnose_performance.py  precise_benchmark.py  project_memorandum.md  pyproject.toml  pyproject.toml.windows  readme_benchmark.py  readme_benchmark_final.py  readme_exact_benchmark.py  run_benchmark.py  test_drop_operations.py  test_operators.py  test_performance_optimization.py  test_quick_benchmark.py  test_save_vs_replace.py  test_simple_inplace.py  test_user_case.py  test_user_original.py  test_windows_fix.py  unified_benchmark.py
.github/workflows/: build-ci.yml  publish-cargo.yml
benches/: python_api_bench.py  rust_api_bench.rs
benchmarks/: readme_metrics_bench.py  storage_layout_baseline_bench.py
docs/: 01_getting_started.md  06_quick_reference.md  07_io_conversion.md  README.md  lazy_array_operators_implementation.md
docs/api_reference/: README.md
docs/api_reference/io/: README.md  arrow_feather.md  numpy.md  pandas.md  pytorch.md  safetensors.md
examples/: drop_operations_example.py  inplace_operators_example.py  vector_engine_demo.py  writable_batch_mode_example.py
python/numpack/: __init__.py  binary_compatible_format.py  mmap.py  msgpack_compatible_format.py  rust_compatible_format.py  unified_numpack.py  windows_handle_manager.py  writable_array.py
python/numpack/io/: __init__.py  csv_io.py  feather_io.py  hdf5_io.py  numpy_io.py  pandas_io.py  parquet_io.py  pytorch_io.py  s3_io.py  safetensors_io.py  utils.py  zarr_io.py
python/numpack/tests/: README.md  benchmark.py  comprehensive_benchmark.py  conftest.py  test_advanced_api.py  test_batch_mode_streaming.py  test_batch_modes.py  test_cross_platform.py  test_drop_append_lazy.py  test_drop_scenarios.py  test_inplace_operators.py  test_io_conversion.py  test_lazy_array_advanced.py  test_lazy_array_operators.py  test_numpack.py  test_performance.py  test_return_npk_obj.py  test_user_intent.py  test_windows_handles.py  test_writable_batch_mode.py  windows_cleanup_helper.py
python/numpack/vector_engine/: __init__.py
src/: batch_access_engine.rs  binary_metadata.rs  error.rs  fancy_index_integration_test.rs  fancy_index_tests.rs  float16_numpy.rs  io.rs  lazy_array.rs  lib.rs  lock.rs  metadata.rs  msgpack_metadata.rs  multilevel_cache_tests.rs  parallel_io.rs  prelude.rs  types.rs  windows_mapping.rs  zero_copy_tests.rs
src/cache/: adaptive_cache.rs  adaptive_compression.rs  compressed_cache.rs  compression_cache.rs  lru_cache.rs  mod.rs  multilevel_cache.rs  performance_monitor.rs  prefetch.rs  smart_cache.rs
src/core/: error.rs  metadata.rs  mod.rs
src/gpu/: cuda_backend.rs  cuda_kernels.cu  hip_kernels.cpp  metal_backend.rs  metal_backend_optimized.rs  mod.rs  rocm_backend.rs  wgpu_backend.rs
src/indexing/: algorithms.rs  fancy_index.rs  mod.rs  optimizations.rs  smart_router.rs
src/io/: mod.rs  parallel_io.rs
src/lazy_array/: core.rs  ffi_optimization.rs  high_performance.rs  indexing.rs  iterator.rs  mod.rs  simd_ops.rs  standard.rs
src/memory/: handle_manager.rs  mod.rs  numpack_simd.rs  simd_processor.rs  windows_simd.rs  zero_copy.rs
src/memory/numpack_simd/: access_pattern_simd.rs  benchmark.rs  x86_impl.rs
src/numpack/: core.rs  mod.rs  python_bindings.rs
src/performance/: gil_optimization.rs  mod.rs
src/storage/: binary_metadata.rs  deletion_bitmap.rs  mod.rs
src/tests/: mod.rs  multilevel_cache_tests.rs  prefetch_benchmark.rs  prefetch_tests.rs  rust_api_tests.rs  windows_safety_tests.rs  zero_copy_tests.rs
src/vector_engine/: core.rs  metrics.rs  mod.rs  python_bindings.rs  simd_backend.rs
