[package]
name = "numpack"
version = "0.1.3"
edition = "2021"

[lib]
name = "numpack"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
numpy = "0.19.0"
ndarray = "0.15.6"
tempfile = "3.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
memmap2 = "0.5.10"
half = "2.3"
bitvec = "1.0.1"
bincode = "1.3"
crc32fast = "1.3"
bytemuck = "1.14.3"
serde_bytes = "0.11"
libc = "0.2"
lazy_static = "1.4.0"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[build-dependencies]
pyo3-build-config = "0.20.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
python-source = "python"
target-triple-features = [
    "aarch64-unknown-linux-gnu",
]

