[package]
name = "numpack"
version = "0.2.1"
edition = "2021"

[lib]
name = "numpack"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
numpy = { version = "0.25.0", features = ["half"] }
ndarray = "0.16"
num-complex = "0.4"
tempfile = "3.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = { version = "1.8", optional = true }
memmap2 = "0.5.10"
half = { version = "2.6.0", features = ["bytemuck"] }
bitvec = "1.0.1"
bincode = "1.3"
rmp-serde = "1.1"
crc32fast = "1.3"
bytemuck = "1.14.3"
serde_bytes = "0.11"
libc = "0.2"
lazy_static = "1.4.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
dashmap = "5.5"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Windows 特定依赖已移除，不再需要

[build-dependencies]
pyo3-build-config = "0.25.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "rayon"]
avx512 = []
rayon = ["dep:rayon"]

[package.metadata.maturin]
python-source = "python"
target-triple-features = [
    "aarch64-unknown-linux-gnu",
]

